# festy-crew

./: .env.example  .gitignore  README.md  phase1.py  phase2.py  pyproject.toml
src/festy_crew/: __init__.py
src/festy_crew/enrichment_crew/: __init__.py  crew.py
src/festy_crew/enrichment_crew/config/: agents.yaml  tasks.yaml
src/festy_crew/models/: __init__.py  festival.py
src/festy_crew/research_crew/: __init__.py  crew.py
src/festy_crew/research_crew/config/: agents.yaml  tasks.yaml
src/festy_crew/tools/: __init__.py  firecrawl_tool.py  hunter_tool.py
src/festy_crew/utils/: __init__.py  csv_handler.py
